@@ -43,11 +43,11 @@ Block MASS                      # Mass spectrum
    1000004     1.05267206e+03   # ~c_L
    1000005     9.65369393e+02   # ~b_1
    1000006     8.03461447e+02   # ~t_1
-   1000011     3.61767168e+02   # ~e_L
+   1000011     3.61785888e+02   # ~e_L
    1000012     3.52889302e+02   # ~nue_L
-   1000013     3.61851160e+02   # ~mu_L
+   1000013     3.61782612e+02   # ~mu_L
    1000014     3.52885955e+02   # ~numu_L
-   1000015     2.22687580e+02   # ~stau_1
+   1000015     2.22687949e+02   # ~stau_1
    1000016     3.51717382e+02   # ~nu_tau_L
    2000001     1.01091006e+03   # ~d_R
    2000002     1.01422937e+03   # ~u_R
@@ -57,7 +57,7 @@ Block MASS                      # Mass spectrum
    2000006     1.01094208e+03   # ~t_2
    2000011     2.29867498e+02   # ~e_R
    2000013     2.29857062e+02   # ~mu_R
-   2000015     3.62928800e+02   # ~stau_2
+   2000015     3.62947365e+02   # ~stau_2
 Block alpha                     # Effective Higgs mixing parameter
           -1.06799163e-01       # alpha
 Block nmix                  # neutralino mixing matrix
@@ -98,10 +98,10 @@ Block sbotmix               # sbottom mixing matrix
   2  1    -2.18118102e-01   # F_{21}
   2  2     9.75922381e-01   # F_{22}
 Block staumix               # stau mixing matrix
-  1  1     1.42720454e-01   # F_{11}
-  1  2     9.89763038e-01   # F_{12}
-  2  1     9.89763038e-01   # F_{21}
-  2  2    -1.42720454e-01   # F_{22}
+  1  1     1.42706600e-01   # F_{11}
+  1  2     9.89765036e-01   # F_{12}
+  2  1     9.89765036e-01   # F_{21}
+  2  2    -1.42706600e-01   # F_{22}
 Block gauge Q= 8.73739678e+02  # SM gauge couplings
      1     3.62403063e-01   # g'(Q)MSSM DRbar
      2     6.43031008e-01   # g(Q)MSSM DRbar
