@@ -51,7 +51,7 @@ Block MASS                      # Mass spectrum
         25     1.15562865e+02   # CP even neutral scalar
         35     3.21044931e+02   # CP even neutral scalar
         36     3.21044931e+02   # CP odd neutral scalar
-        37     1.87911863e+02   # charged scalar
+        37     1.87913307e+02   # charged scalar
    1000021     1.14813606e+03   # ~g
    1000022     2.05522128e+02   # ~neutralino(1)
    1000023     3.87791798e+02   # ~neutralino(2)
@@ -59,11 +59,11 @@ Block MASS                      # Mass spectrum
    1000025    -6.33183756e+02   # ~neutralino(3)
    1000035     6.45282163e+02   # ~neutralino(4)
    1000037     6.45647652e+02   # ~chargino(2)
-   1000011     2.17153009e+02   # charged scalar
+   1000011     2.17153020e+02   # charged scalar
    1000013     2.17240952e+02   # charged scalar
-   1000015     3.32375539e+02   # charged scalar
-   2000011     3.53117085e+02   # charged scalar
-   2000013     3.56130865e+02   # charged scalar
+   1000015     3.32394842e+02   # charged scalar
+   2000011     3.53138872e+02   # charged scalar
+   2000013     3.56142047e+02   # charged scalar
    2000015     6.61280784e+02   # charged scalar
    1000012     3.40718931e+02   # CP even neutral scalar
    1000014     3.43763687e+02   # CP even neutral scalar
