@@ -49,12 +49,12 @@ Block MASS                      # Mass spectrum
    1000025    -6.27352220e+02   # ~neutralino(3)
    1000035     6.41557377e+02   # ~neutralino(4)
    1000037     6.41439110e+02   # ~chargino(2)
-   1000011     2.22764607e+02   # ~e_1
-   1000013     2.29799547e+02   # ~e_2
+   1000011     2.22764954e+02   # ~e_1
+   1000013     2.29799540e+02   # ~e_2
    1000015     2.29821662e+02   # ~e_3
-   2000011     3.61460017e+02   # ~e_4
-   2000013     3.61551154e+02   # ~e_5
-   2000015     3.61772012e+02   # ~e_6
+   2000011     3.61478039e+02   # ~e_4
+   2000013     3.61482295e+02   # ~e_5
+   2000015     3.61782567e+02   # ~e_6
    1000012     3.51539179e+02   # ~nu_1
    1000014     3.52555258e+02   # ~nu_2
    1000016     3.52558629e+02   # ~nu_3
@@ -174,17 +174,17 @@ Block DSQMIX  # super CKM squark mass^2 matrix
 Block SELMIX  # super MNS slepton mass^2 matrix
   1  1     0.00000000e+00   # (SELMIX)_{11}
   1  2     0.00000000e+00   # (SELMIX)_{12}
-  1  3     1.40759564e-01   # (SELMIX)_{13}
+  1  3     1.40746335e-01   # (SELMIX)_{13}
   1  4     0.00000000e+00   # (SELMIX)_{14}
   1  5     0.00000000e+00   # (SELMIX)_{15}
-  1  6     9.90043810e-01   # (SELMIX)_{16}
+  1  6     9.90045691e-01   # (SELMIX)_{16}
   2  1     0.00000000e+00   # (SELMIX)_{21}
-  2  2     8.31794851e-03   # (SELMIX)_{22}
+  2  2     8.32326729e-03   # (SELMIX)_{22}
   2  3     0.00000000e+00   # (SELMIX)_{23}
   2  4     0.00000000e+00   # (SELMIX)_{24}
-  2  5     9.99965405e-01   # (SELMIX)_{25}
+  2  5     9.99965361e-01   # (SELMIX)_{25}
   2  6     0.00000000e+00   # (SELMIX)_{26}
-  3  1     4.02662523e-05   # (SELMIX)_{31}
+  3  1     4.02595132e-05   # (SELMIX)_{31}
   3  2     0.00000000e+00   # (SELMIX)_{32}
   3  3     0.00000000e+00   # (SELMIX)_{33}
   3  4     9.99999999e-01   # (SELMIX)_{34}
@@ -193,21 +193,21 @@ Block SELMIX  # super MNS slepton mass^2 matrix
   4  1     9.99999999e-01   # (SELMIX)_{41}
   4  2     0.00000000e+00   # (SELMIX)_{42}
   4  3     0.00000000e+00   # (SELMIX)_{43}
-  4  4    -4.02662523e-05   # (SELMIX)_{44}
+  4  4    -4.02595132e-05   # (SELMIX)_{44}
   4  5     0.00000000e+00   # (SELMIX)_{45}
   4  6     0.00000000e+00   # (SELMIX)_{46}
   5  1     0.00000000e+00   # (SELMIX)_{51}
-  5  2     9.99965405e-01   # (SELMIX)_{52}
+  5  2     9.99965361e-01   # (SELMIX)_{52}
   5  3     0.00000000e+00   # (SELMIX)_{53}
   5  4     0.00000000e+00   # (SELMIX)_{54}
-  5  5    -8.31794851e-03   # (SELMIX)_{55}
+  5  5    -8.32326729e-03   # (SELMIX)_{55}
   5  6     0.00000000e+00   # (SELMIX)_{56}
   6  1     0.00000000e+00   # (SELMIX)_{61}
   6  2     0.00000000e+00   # (SELMIX)_{62}
-  6  3     9.90043810e-01   # (SELMIX)_{63}
+  6  3     9.90045691e-01   # (SELMIX)_{63}
   6  4     0.00000000e+00   # (SELMIX)_{64}
   6  5     0.00000000e+00   # (SELMIX)_{65}
-  6  6    -1.40759564e-01   # (SELMIX)_{66}
+  6  6    -1.40746335e-01   # (SELMIX)_{66}
 Block SNUMIX                # super MNS slepton mass^2 matrix
   1  1     0.00000000e+00   # (SNUMIX)_{11}
   1  2     0.00000000e+00   # (SNUMIX)_{12}
