@@ -33,10 +33,10 @@ Block MASS                      # Mass spectrum
    1000021     1.14714238e+03   # ~g
    1000022     2.04227352e+02   # ~neutralino(1)
    1000023     3.86195121e+02   # ~neutralino(2)
-   1000024     3.86389040e+02   # ~chargino(1)
+   1000024     3.86378263e+02   # ~chargino(1)
    1000025    -6.39507028e+02   # ~neutralino(3)
    1000035     6.52911955e+02   # ~neutralino(4)
-   1000037     6.52846398e+02   # ~chargino(2)
+   1000037     6.52800875e+02   # ~chargino(2)
    1000001     1.05550000e+03   # ~d_L
    1000002     1.05267464e+03   # ~u_L
    1000003     1.05549743e+03   # ~s_L
@@ -78,15 +78,15 @@ Block nmix                  # neutralino mixing matrix
   4  3     6.78235053e-01   # N_{4,3}
   4  4    -6.92960821e-01   # N_{4,4}
 Block Umix                  # chargino U mixing matrix 
-  1  1     9.60673240e-01   # U_{1,1}
-  1  2    -2.77681337e-01   # U_{1,2}
-  2  1     2.77681337e-01   # U_{2,1}
-  2  2     9.60673240e-01   # U_{2,2}
+  1  1     9.60650884e-01   # U_{1,1}
+  1  2    -2.77758671e-01   # U_{1,2}
+  2  1     2.77758671e-01   # U_{2,1}
+  2  2     9.60650884e-01   # U_{2,2}
 Block Vmix                  # chargino V mixing matrix 
-  1  1     9.82625120e-01   # V_{1,1}
-  1  2    -1.85601381e-01   # V_{1,2}
-  2  1     1.85601381e-01   # V_{2,1}
-  2  2     9.82625120e-01   # V_{2,2}
+  1  1     9.82605183e-01   # V_{1,1}
+  1  2    -1.85706904e-01   # V_{1,2}
+  2  1     1.85706904e-01   # V_{2,1}
+  2  2     9.82605183e-01   # V_{2,2}
 Block stopmix               # stop mixing matrix
   1  1     4.25029114e-01   # F_{11}
   1  2     9.05179680e-01   # F_{12}
