@@ -45,10 +45,10 @@ Block MASS                      # Mass spectrum
    1000021     1.15306220e+03   # ~g
    1000022     2.04227275e+02   # ~neutralino(1)
    1000023     3.85341046e+02   # ~neutralino(2)
-   1000024     3.85521938e+02   # ~chargino(1)
+   1000024     3.85511770e+02   # ~chargino(1)
    1000025    -6.27352220e+02   # ~neutralino(3)
    1000035     6.41557377e+02   # ~neutralino(4)
-   1000037     6.41439110e+02   # ~chargino(2)
+   1000037     6.41405088e+02   # ~chargino(2)
    1000011     2.22764954e+02   # ~e_1
    1000013     2.29799540e+02   # ~e_2
    1000015     2.29821662e+02   # ~e_3
@@ -88,15 +88,15 @@ Block nmix                  # neutralino mixing matrix
   4  3     6.75886096e-01   # N_{4,3}
   4  4    -6.91555955e-01   # N_{4,4}
 Block Umix                  # chargino U mixing matrix 
-  1  1     9.57477901e-01   # U_{1,1}
-  1  2    -2.88506619e-01   # U_{1,2}
-  2  1     2.88506619e-01   # U_{2,1}
-  2  2     9.57477901e-01   # U_{2,2}
+  1  1     9.57456205e-01   # U_{1,1}
+  1  2    -2.88578613e-01   # U_{1,2}
+  2  1     2.88578613e-01   # U_{2,1}
+  2  2     9.57456205e-01   # U_{2,2}
 Block Vmix                  # chargino V mixing matrix 
-  1  1     9.80717550e-01   # V_{1,1}
-  1  2    -1.95430517e-01   # V_{1,2}
-  2  1     1.95430517e-01   # V_{2,1}
-  2  2     9.80717550e-01   # V_{2,2}
+  1  1     9.80698134e-01   # V_{1,1}
+  1  2    -1.95527928e-01   # V_{1,2}
+  2  1     1.95527928e-01   # V_{2,1}
+  2  2     9.80698134e-01   # V_{2,2}
 Block USQMIX  # super CKM squark mass^2 matrix
   1  1     1.49436842e-05   # (USQMIX)_{11}
   1  2     1.58155539e-04   # (USQMIX)_{12}
